AEON Initial Part 1

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@
 /Assembly-CSharp-firstpass-vs.csproj
 /Assembly-CSharp-firstpass.csproj
 /Assembly-CSharp.csproj
-/waitingForHorus-csharp.sln
-/waitingForHorus.sln
-/waitingForHorus-csharp-vs.suo
-/_ReSharper.waitingForHorus-csharp-vs
+/Prevaricator-csharp.sln
+/Prevaricator.sln
+/Prevaricator-csharp-vs.suo
+/_ReSharper.Prevaricator-csharp-vs
 /obj
 /Builds
 /Assembly-CSharp-vs.csproj.user
